Fixed summary text colors for better contrast.

--- a/styles/Calendar.module.css
+++ b/styles/Calendar.module.css
@@ -53,7 +53,7 @@
 
 .calendar {
   width: 100%;
-  background: rgba(0, 0, 0, 0.0);
+  background: rgba(0, 0, 0, 0);
   margin: auto;
 }
 
